--- a/catalog.html
+++ b/catalog.html
@@ -32,39 +32,44 @@
 					<p class="search-icon">
 						<a href="#" class="button"><span class="visually-hidden">Поиск</span></a>
 					</p>
-					<div class="header-popup">
-						<form class="form-search" action="https://echo.htmlacademy.ru" method="get" name="form-search">
-							<label><span class="visually-hidden">Поиск</span>
-							<input type="text" name="search-field" placeholder="Что ищем?">
-							</label>
-							<button class="button visually-hidden" type="submit">Поиск</button>
-						</form>
+					<div class="search-style">
+						<div class="header-popup">
+							<form class="form-search" action="https://echo.htmlacademy.ru" method="get" name="form-search">
+								<label><span class="visually-hidden">Поиск</span>
+								<input type="text" name="search-field" placeholder="Что ищем?">
+								</label>
+								<button class="button visually-hidden" type="submit">Поиск</button>
+							</form>
+						</div>
 					</div>
 				</li>
 				<li class="profile">
 					<p class="profile-icon">
 						<a href="#" class="button">Вход</a>
 					</p>
-					<div class="header-popup">
-						<form class="form-profile" action="https://echo.htmlacademy.ru" method="get" name="form-profile">
-							<label><span class="visually-hidden">Электронная почта</span>
-							<input type="email" name="email-field" placeholder="Электронная почта">
-							</label>
-							<label><span class="visually-hidden">Пароль</span>
-							<input type="password" name="password-field" placeholder="Пароль">
-							</label>
-							<div class="profile-popup-wrapper">
-								<button class="button" type="submit">Войти</button>
-								<p class="profile-support">
-									<a href="#">Забыли пароль?</a>
-									<a href="#">Новая регистрация</a>
-								</p>
-							</div>
-						</form>
+					<div class="profile-style">
+						<div class="header-popup">
+							<form class="form-profile" action="https://echo.htmlacademy.ru" method="get" name="form-profile">
+								<label><span class="visually-hidden">Электронная почта</span>
+								<input type="email" name="email-field" placeholder="Электронная почта">
+								</label>
+								<label><span class="visually-hidden">Пароль</span>
+								<input type="password" name="password-field" placeholder="Пароль">
+								</label>
+								<div class="profile-popup-wrapper">
+									<button class="button" type="submit">Войти</button>
+									<p class="profile-support">
+										<a href="#">Забыли пароль?</a>
+										<a href="#">Новая регистрация</a>
+									</p>
+								</div>
+							</form>
+						</div>
 					</div>
 				</li>
 				<li class="cart">
 					<p class="cart-status">2 товара</p>
+					<div class="cart-style">
 					<form class="form-cart" action="https://echo.htmlacademy.ru" method="get" name="form-cart">
 						<table class="cart-product-list">
 							<tr class="cart-product-item">
@@ -111,6 +116,7 @@
 							<a href="#" class="button">Оформить заказ</a>
 						</p>
 					</form>
+				</div>
 				</li>
 			</ul>
 		</nav>
