--- a/index.html
+++ b/index.html
@@ -17,50 +17,56 @@
 			</a>
 			<ul class="site-navigation">
 				<li><a href="catalog.html">Каталог</a>
-				<ul class="catalog-navigation">
-					<li class="catalog-novelties"><a href="#">Новинки</a></li>
-					<li><a href="#">Сливочное</a></li>
-					<li><a href="#">Щербеты</a></li>
-					<li><a href="#">Фруктовый лед</a></li>
-					<li><a href="#">Мелорин</a></li>
-				</ul>
+				<div class="site-navigation-style">
+					<ul class="catalog-navigation">
+						<li class="catalog-novelties"><a href="#">Новинки</a></li>
+						<li><a href="#">Сливочное</a></li>
+						<li><a href="#">Щербеты</a></li>
+						<li><a href="#">Фруктовый лед</a></li>
+						<li><a href="#">Мелорин</a></li>
+					</ul>
+				</div>
 				</li>
 				<li><a href="delivery.html">Доставка и оплата</a></li>
-				<li><a href="about-us.html">О Компании</a></li>
+				<li><a href="about-us.html">О Компании</a></li>				
 			</ul>
 			<ul class="user-navigation">
 				<li class="search">
 					<p class="search-icon">
 						<a href="#" class="button"><span class="visually-hidden">Поиск</span></a>
 					</p>
-					<div class="header-popup">
-						<form class="form-search" action="https://echo.htmlacademy.ru" method="get" name="form-search">
-							<label><span class="visually-hidden">Поиск</span>
-							<input type="text" name="search-field" placeholder="Что ищем?"><button class="button visually-hidden" type="submit">Поиск</button>
-							</label>
-						</form>
+					<div class="search-style">
+						<div class="header-popup">
+							<form class="form-search" action="https://echo.htmlacademy.ru" method="get" name="form-search">
+								<label><span class="visually-hidden">Поиск</span>
+								<input type="text" name="search-field" placeholder="Что ищем?"><button class="button visually-hidden" type="submit">Поиск</button>
+								</label>
+							</form>
+						</div>
 					</div>
 				</li>
 				<li class="profile">
 					<p class="profile-icon">
 						<a href="#" class="button">Вход</a>
 					</p>
-					<div class="header-popup">
-						<form class="form-profile" action="https://echo.htmlacademy.ru" method="get" name="form-profile">
-							<label><span class="visually-hidden">Электронная почта</span>
-							<input type="email" name="email-field" placeholder="Электронная почта">
-							</label>
-							<label><span class="visually-hidden">Пароль</span>
-							<input type="password" name="password-field" placeholder="Пароль">
-							</label>
-							<div class="profile-popup-wrapper">
-								<button class="button" type="submit">Войти</button>
-								<p class="profile-support">
-									<a href="#">Забыли пароль?</a>
-									<a href="#">Новая регистрация</a>
-								</p>
-							</div>
-						</form>
+					<div class="profile-style">
+						<div class="header-popup">
+							<form class="form-profile" action="https://echo.htmlacademy.ru" method="get" name="form-profile">
+								<label><span class="visually-hidden">Электронная почта</span>
+								<input type="email" name="email-field" placeholder="Электронная почта">
+								</label>
+								<label><span class="visually-hidden">Пароль</span>
+								<input type="password" name="password-field" placeholder="Пароль">
+								</label>
+								<div class="profile-popup-wrapper">
+									<button class="button" type="submit">Войти</button>
+									<p class="profile-support">
+										<a href="#">Забыли пароль?</a>
+										<a href="#">Новая регистрация</a>
+									</p>
+								</div>
+							</form>
+						</div>
 					</div>
 				</li>
 				<li class="cart">
