--- a/catalog.html
+++ b/catalog.html
@@ -16,13 +16,15 @@
 			</a>
 			<ul class="site-navigation">
 				<li><a href="catalog.html">Каталог</a>
-				<ul class="catalog-navigation">
-					<li class="catalog-novelties"><a href="#">Новинки</a></li>
-					<li><a href="#">Сливочное</a></li>
-					<li><a href="#">Щербеты</a></li>
-					<li><a href="#">Фруктовый лед</a></li>
-					<li><a href="#">Мелорин</a></li>
-				</ul>
+				<div class="site-navigation-style">
+					<ul class="catalog-navigation">
+						<li class="catalog-novelties"><a href="#">Новинки</a></li>
+						<li><a href="#">Сливочное</a></li>
+						<li><a href="#">Щербеты</a></li>
+						<li><a href="#">Фруктовый лед</a></li>
+						<li><a href="#">Мелорин</a></li>
+					</ul>
+				</div>
 				</li>
 				<li><a href="delivery.html">Доставка и оплата</a></li>
 				<li><a href="about-us.html">О Компании</a></li>
@@ -376,7 +378,7 @@
 
 				<ul class="pagination">
 					<li class="pagination-item">
-						<a href="#"><span class="visually-hidden">Назад</span></a>
+						<a href="#" class="previous">Назад</a>
 					</li>
 					<li class="pagination-item pagination-item-current">
 						<a href="#">1</a>
@@ -394,7 +396,7 @@
 						<a href="#">5</a>
 					</li>
 					<li class="pagination-item">
-						<a href="#"><span class="visually-hidden">Вперед</span></a>
+						<a href="#" class="next">Вперед</a>
 					</li>
 				</ul>
 			</section>
